--- a/css/front-page/header.css
+++ b/css/front-page/header.css
@@ -6,6 +6,16 @@ body {
 a {
   outline: none;
 }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
 
 *,
 ::after,
@@ -14,23 +24,24 @@ a {
   box-sizing: border-box;
 }
 header {
-  height: 750px;
 }
 .np-header,
 .np-container {
-  position: sticky;
-  top: -1px;
-  z-index: 9;
-  height: 100px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .np-header {
-  margin-bottom: 180px;
+  position: fixed;
+  width: 100%;
+  top: -1px;
+  z-index: 9;
+  height: 100px;
+  background-color: #f5f5f5;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
 }
-.np-logo {
-}
+
 .np-logo a {
   font-family: "Montserrat", sans-serif;
   text-decoration: none;
@@ -71,7 +82,8 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  justify-content: center;
+  height: 650px;
 }
 .np-content__text {
   text-align: center;
