--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,4 @@
 @import url(../css/front-page/our-products.css);
 @import url(../css/front-page/projects.css);
 @import url(../css/front-page/contact-us.css);
+@import url(../css/front-page/footer.css);
