--- a/css/front-page/header.css
+++ b/css/front-page/header.css
@@ -25,8 +25,7 @@ h6 {
 }
 header {
 }
-.np-header,
-.np-container {
+.np-header .np-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -36,6 +35,7 @@ header {
   width: 100%;
   top: -1px;
   z-index: 9;
+  padding-top: 30px;
   height: 100px;
   background-color: #f5f5f5;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
