--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url(../css/common/layout.css);
 @import url(../css/front-page/header.css);
+@import url(../css/front-page/content.css);
 @import url(../css/front-page/masthead.css);
 @import url(../css/front-page/our-products.css);
 @import url(../css/front-page/projects.css);
