--- a/css/front-page/header.css
+++ b/css/front-page/header.css
@@ -24,18 +24,17 @@ h6 {
   box-sizing: border-box;
 }
 header {
+  position: sticky;
+  top: -1px;
+  z-index: 9;
 }
 .np-header .np-container {
   display: flex;
+  height: 100%;
   align-items: center;
   justify-content: space-between;
 }
 .np-header {
-  position: fixed;
-  width: 100%;
-  top: -1px;
-  z-index: 9;
-  padding-top: 30px;
   height: 100px;
   background-color: #f5f5f5;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
@@ -77,46 +76,4 @@ header {
   color: #1d1d1d;
   text-decoration: none;
   font-weight: bold;
-}
-.np-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 650px;
-}
-.np-content__text {
-  text-align: center;
-  padding-bottom: 26px;
-  color: #1d1d1d;
-}
-.np-content__text h1 {
-  padding: 0;
-  margin: 0;
-  padding-bottom: 12px;
-  font-size: 80px;
-  font-family: "Playfair Display", serif;
-  letter-spacing: 0;
-  font-weight: 600;
-}
-.np-content__text p {
-  font-family: "Open Sans", sans-serif;
-  font-size: 18px;
-  margin: 0;
-  padding: 0;
-  letter-spacing: 0px;
-  width: 656px;
-}
-.np-content__button {
-  width: 190px;
-  height: 52px;
-  background: #1005ff;
-  border-radius: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.np-content__button a {
-  color: #ffffff;
-  text-decoration: none;
 }
