--- a/css/front-page/our-products.css
+++ b/css/front-page/our-products.css
@@ -1,74 +1,143 @@
 .np-our-products {
-  padding: 105px 0;
 }
-.np-our-products .np-container {
-  display: block;
-}
-.np-our-products__title {
-  padding-bottom: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.np-our-products__title h3 {
-  color: #1d1d1d;
-  font-size: 33px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-}
-.np-our-ptoducts__more {
-  letter-spacing: 1.97px;
-  color: #1d1d1d;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-  font-size: 14px;
+.np-container {
 }
 .np-our-products__wrapper {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
 }
-.np-our-products__content-1 {
-  position: relative;
-
-  padding: 15px;
-  margin: -15px;
-}
-.np-our-products__content-1 img {
-  width: 570px;
-  height: 582px;
-}
-.np-our-products__text {
-  position: absolute;
-  z-index: 1;
-  color: #ffffff;
-  left: 25px;
-  bottom: 15px;
+.np-our-products__title {
   display: flex;
-  flex-direction: column;
-  font-size: 16px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px 0;
+}
+.np-our-products__title-text {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  font-size: 33px;
 }
-.np-our-products__text span {
-  color: #666666;
+.np-our-products__title-more {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  padding-right: 15px;
+}
+.np-our-products__main {
+  flex: 0 0 50%;
+  max-width: 50%;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  height: 100%;
+}
+.np-our-products__main-text {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  color: #ffffff;
+  text-align: left;
+  z-index: 2;
+  padding-left: 25px;
+  padding-bottom: 15px;
+}
+.np-our-products__main-text-1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+.np-our-products__main-text-2 {
   font-family: "Open Sans", sans-serif;
   font-size: 15px;
+  font-weight: 200;
 }
-.np-our-products__content-2 {
-  flex: 0 0 50%;
-  width: 50%;
+.np-our-products__img {
+  width: 100%;
+  padding-right: 8px;
+  height: 570px;
+}
+.np-our-products__img img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.np-our-products__items {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  flex: 0 0 50%;
+  max-width: 50%;
+  text-align: center;
+  justify-content: center;
+  margin-top: -8px;
 }
-.np-our-products__content-2__row {
+.np-our-products__item {
+  flex: 0 0 calc(50% - 16px);
+  max-width: calc(50% - 16px);
+  margin: 8px;
   position: relative;
-  padding-left: 15px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
 }
+.np-our-products__item-img {
+  height: 100%;
+  height: 270px;
+  width: 100%;
+}
+.np-our-products__item-img img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 1670px) {
+}
+@media (max-width: 1500px) {
+}
+@media (max-width: 1400px) {
+}
+@media (max-width: 1300px) {
+}
+@media (max-width: 1199px) {
+}
+@media (max-width: 991px) {
+  .np-our-products__main {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding-bottom: 15px;
+  }
+  .np-our-products__items {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .np-our-products__item {
+    margin: 0;
+    margin-bottom: 16px;
+    flex: 0 0 calc(50% - 8px);
+    max-width: calc(50% - 8px);
+    margin-right: 8px;
+  }
+  .np-our-products {
+    display: flex;
+  }
+}
+@media (max-width: 767px) {
+}
+@media (max-width: 575px) {
+  .np-our-products__title {
+    padding: 20px 0;
+    flex-direction: column;
+  }
+  .np-our-products__img {
+    height: 270px;
+  }
+  .np-our-products__title-text {
+    font-size: 24px;
+  }
 
-.np-our-products__content-2__row img {
-  width: 270px;
-  height: 276px;
+  .np-our-products__item {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-right: 0px;
+  }
 }
