--- a/css/front-page/contact-us.css
+++ b/css/front-page/contact-us.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .np-contact-us__img {
   flex: 0 0 50%;
@@ -24,7 +25,7 @@
   justify-content: center;
 }
 .np-contact-us__text {
- }
+}
 .np-contact-us__text h4 {
   font-family: "Montserrat", sans-serif;
   font-size: 33px;
@@ -74,4 +75,52 @@
   border-bottom-right-radius: 24px;
   border-top-right-radius: 24px;
   font-weight: 100;
+}
+
+@media (max-width: 1670px) {
+}
+@media (max-width: 1500px) {
+}
+@media (max-width: 1400px) {
+}
+@media (max-width: 1300px) {
+}
+@media (max-width: 1199px) {
+  .np-form {
+    width: 688px;
+  }
+  .np-form__input {
+    width: 448px;
+  }
+}
+@media (max-width: 991px) {
+  .np-contact-us__img {
+    flex: 0 0 100%;
+    width: 100%;
+    padding-bottom: 20px;
+  }
+  .np-contact-us__content {
+    flex: 0 0 100%;
+    width: 100%;
+    padding: 0;
+    align-items: center;
+    text-align: center;
+  }
+  .np-form__button {
+    right: 120px;
+  }
+}
+@media (max-width: 767px) {
+}
+@media (max-width: 575px) {
+  .np-form__button {
+    right: 240px;
+    width: 80px;
+    height: 38px;
+    bottom: 28%;
+  }
+  .np-form__input {
+    width: 208px;
+    height: 38px;
+  }
 }
